--- a/style.css
+++ b/style.css
@@ -1,16 +1,34 @@
 /* Importar una fuente personalizada: Montserrat Alternates */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap');
 
-@keyframes bgrandom { /* linear-gradient(to right, rgb(5, 117, 230), rgb(2, 27, 121)); */
-    0% { background: linear-gradient(to right, #6dd5ed 5%, #2193b0 95%); }
-    34% { background: linear-gradient(to right, #f953c6 5%, #b91d73 95%); }
+/*  */
+@keyframes bgrandom {
 
-    35% { background: linear-gradient(to right,  #fdc830 5%, #f37335 95%); }
-    67% { background: linear-gradient(to right, #99f2c8  5%, #1f4037 95%); }
-
-    68% { background: linear-gradient(to right, #bdc3c7 5%, #2c3e50 95%); }
-    100% { background: linear-gradient(to right, #06beb6 5%, #48b1bf 95%); }
+    /* linear-gradient(to right, rgb(5, 117, 230), rgb(2, 27, 121)); */
+    0% {
+        background: linear-gradient(to right, #6dd5ed 5%, #2193b0 95%);
     }
+
+    34% {
+        background: linear-gradient(to right, #f953c6 5%, #b91d73 95%);
+    }
+
+    35% {
+        background: linear-gradient(to right, #fdc830 5%, #f37335 95%);
+    }
+
+    67% {
+        background: linear-gradient(to right, #99f2c8 5%, #1f4037 95%);
+    }
+
+    68% {
+        background: linear-gradient(to right, #bdc3c7 5%, #2c3e50 95%);
+    }
+
+    100% {
+        background: linear-gradient(to right, #06beb6 5%, #48b1bf 95%);
+    }
+}
 
 /* Anular todos los estilos */
 * {
@@ -65,6 +83,7 @@ header.menu {
     /* Borde redondeado */
     border-radius: 5px;
 
+    /* Cambio de fondo de la barra de menú */
     animation: 25.0s bgrandom infinite;
 }
 
@@ -169,7 +188,7 @@ main {
 }
 
 /* Subtítulo */
-main h2{
+main h2 {
     font-family: 'Montserrat Alternates', sans-serif;
     font-size: 2.3em;
 }
@@ -177,24 +196,30 @@ main h2{
 /* Imágenes */
 img {
     /* Ancho de la imagen */
-    width: 120px;
+    width: 96px;
 
     /* Convertirla en círculo */
     border-radius: 50%;
 
     /* Sombra */
-    box-shadow: 0 0 5px rgb(0, 0, 0);
-    
+    box-shadow: 0 0 15px rgb(0, 0, 0);
 }
 
 /* Contenedor de la cita */
 section>figure {
-    height: 150px;
     padding: 1em;
     margin: 1.5em auto;
 
     border: 1px solid #1f4037;
     border-radius: 5px;
+}
+
+/* Hack: Evita que se desborde el elemento más alto *
+ * fuera del contenedor */
+section>figure::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 /* Cita */
